--- a/lib/dune
+++ b/lib/dune
@@ -1,5 +1,4 @@
 (library
  (name oplot)
  (public_name oplot)
- (libraries graphics sdl sdl.sdlimage sdl.sdlttf lablgl))
-
+ (libraries graphics tsdl tsdl-image tsdl-ttf lablgl))
