--- a/oplot.opam
+++ b/oplot.opam
@@ -6,7 +6,7 @@ description:
   "High-quality plotting of 2D usual mathematical functions, including animations and LaTeX formulas. Supports also 3D surfaces with interactive rotating."
 maintainer: ["Vu Ngoc San <san.vu-ngoc@laposte.net>"]
 authors: ["Vu Ngoc San <san.vu-ngoc@laposte.net>"]
-license: "GPL2"
+license: "ISC"
 tags: ["plot" "2D" "3D" "math"]
 homepage: "https://github.com/sanette/oplot"
 bug-reports: "https://github.com/sanette/oplot/issues"
