First attempt to make Graphics optional

--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,4 @@
 (library
  (name oplot)
  (public_name oplot)
- (libraries graphics tsdl tsdl-image tsdl-ttf lablgl))
+ (libraries tsdl tsdl-image tsdl-ttf lablgl))
