--- a/oplot.opam
+++ b/oplot.opam
@@ -12,11 +12,11 @@ homepage: "https://github.com/sanette/oplot"
 bug-reports: "https://github.com/sanette/oplot/issues"
 depends: [
   "dune" {>= "2.7"}
-  "graphics"
   "tsdl-image" {>= "0.3.0"}
   "tsdl-ttf" {>= "0.3"}
   "tsdl" {>= "0.9.6"}
-  "lablgl" {>= "1.06"}
+  "tgls"
+  "gl-legacy"
   "ocaml" {>= "4.05.0"}
   "odoc" {with-doc}
 ]
