--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,7 @@ jobs:
           - ubuntu-latest
           - windows-latest
         ocaml-compiler:
+          - 5.03.x
           - 4.13.x
           - 4.08.x
 
@@ -30,6 +31,10 @@ jobs:
         uses: ocaml/setup-ocaml@v2
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
+
+      - run: opam install tgls
+
+      - run: opam pin https://github.com/sanette/gl-legacy.git
 
       - run: opam install . --deps-only --with-doc --with-test
 
